Added the id navlinks

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
     <!-- About section -->
 
-    <div class="block">
+    <div class="block" id="AboutSection">
       <div class="container-fluid">
 
         <br>
@@ -392,7 +392,7 @@
   </div>
 
   <!-- Services section -->
-  <div class="block">
+  <div class="block" id="ServicesSection">
     <div class="container-fluid">
   
      <h1 class="text-center">Services</h1>
@@ -475,7 +475,7 @@
   </div>
 
     <!--collection section -->
-    <div class="block">
+    <div class="block" id="CollectionSection">
       <div class="container-fluid">
     
         <h1 class="text-center"> Collection</h1>
@@ -543,7 +543,7 @@
       </div>
 
   <!-- Contact section -->
-<div class="block">
+<div class="block" id="ContactSection">
   <div class="container-fluid">
 
    <h1 class="text-center">Contact us</h1>
