Added collection layout on the index page but have to fix the spacing

--- a/index.html
+++ b/index.html
@@ -482,7 +482,11 @@
   </div>
 
  <!--Main collection div -->
-<div class="main-wrapper ">
+<div class="main-wrapper">
+
+  <h1 class="text-center">Our collection</h1>
+
+  <br>
   <div class="hero-wrapper">
       <div class="container">
           <div class="hero">
@@ -491,7 +495,7 @@
 
       <div class="wpb_column vc_column_container vc_col-sm-12 ">
       <div class="vc_column-inner ">
-      <div class="top-banner full_wall full-height-hard">
+      <div class="top-banner full_wall">
 
       <div class="gridrotate-gallery">
 
