Removed line break about page. Added more pictures in collections.Changed the a tags

--- a/collection.html
+++ b/collection.html
@@ -217,7 +217,7 @@
       </div>
     </div>
 
-  
+    
 
 <!--Main collection div -->
 <div class="main-wrapper ">
@@ -252,7 +252,7 @@
                 </li>
                                                     <li>
                     <span>
-            <img src="assests/images/profile.jpg"
+            <img src="assests/images/eight.jpg"
             alt="" class="s-img-switch">
                     </span>
                 </li>
@@ -282,61 +282,61 @@
                 </li>
                                                     <li>
                     <span>
-            <img src="assests/images/WebImage.jpg"
+            <img src="assests/images/nine.jpg"
                             alt="" class="s-img-switch">
                     </span>
                 </li>
                                                     <li>
                     <span>
-            <img src="assests/images/five.jpg"
+            <img src="assests/images/ten.jpg"
                             alt="" class="s-img-switch">
                     </span>
                 </li>
                                                     <li>
                     <span>
-            <img src="assests/images/four.jpg"
+            <img src="assests/images/eleven.jpg"
                             alt="" class="s-img-switch">
                     </span>
                 </li>
                                                     <li>
                     <span>
-            <img src="assests/images/logo.jpg"
+            <img src="assests/images/14.jpg"
                             alt="" class="s-img-switch">
                     </span>
                 </li>
                                                     <li>
                     <span>
-            <img src="assests/images/picOne.jpg"
+            <img src="assests/images/15.jpg"
                             alt="" class="s-img-switch">
                     </span>
                 </li>
                                                     <li>
                     <span>
-            <img src="assests/images/profile.jpg"
+            <img src="assests/images/16.jpg"
                             alt="" class="s-img-switch">
                     </span>
                 </li>
                                                     <li>
                     <span>
-            <img src="assests/images/seven.jpg"
+            <img src="assests/images/thriteen.jpg"
                             alt="" class="s-img-switch">
                     </span>
                 </li>
                                                     <li>
                     <span>
-            <img src="assests/images/six.jpg"
+            <img src="assests/images/twelve.jpg"
                             alt="" class="s-img-switch">
                     </span>
                 </li>
                                                     <li>
                     <span>
-            <img src="assests/images/three.jpg"
+            <img src="assests/images/17.jpg"
                             alt="" class="s-img-switch">
                     </span>
                 </li>
                                                     <li>
                     <span>
-            <img src="assests/images/Two.jpg"
+            <img src="assests/images/18.jpg"
                             alt="" class="s-img-switch">
                     </span>
                 </li>
